--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,11 @@
 
             <!-- Ícones de redes sociais no centro -->
             <div class="footer-center">
-                <a href="#"><img src="/assets/icons/facebook.svg" alt="Facebook"></a>
-                <a href="#"><img src="/assets/icons/instagram.svg" alt="Instagram"></a>
-                <a href="#"><img src="/assets/icons/tiktok.svg" alt="TikTok"></a>
-                <a href="#"><img src="/assets/icons/youtube.svg" alt="YouTube"></a>
-                <a href="#"><img src="/assets/icons/x.svg" alt="X"></a>
+                <a href="#"><img src="/troca-tudo/icons/facebook.svg" alt="Facebook"></a>
+                <a href="#"><img src="/troca-tudo/icons/instagram.svg" alt="Instagram"></a>
+                <a href="#"><img src="/troca-tudo/icons/tiktok.svg" alt="TikTok"></a>
+                <a href="#"><img src="/troca-tudo/icons/youtube.svg" alt="YouTube"></a>
+                <a href="#"><img src="/troca-tudo/icons/x.svg" alt="X"></a>
             </div>
 
             <!-- Copyright à direita -->
